sidux-manual (02.07.2010.06.13.1-2) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * bump standards version to 3.9.1, no changes necessary.
  * add a Breaks: sidux-manual-reader (<< 0.2), as old versions can't parse
    with the current menu structure of sidux-manual.
  * switch to compat level 8.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 08 Aug 2010 05:21:56 +0200

sidux-manual (02.07.2010.06.13.1-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 13 Jun 2010 15:11:15 +0200

sidux-manual (02.07.2010.06.03-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 03 Jun 2010 23:50:51 +0200

sidux-manual (02.06.2010.05.18-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 18 May 2010 17:39:30 +0000

sidux-manual (02.06.2010.05.10-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 11 May 2010 02:24:12 +0200

sidux-manual (02.06.2010.05.05-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 05 May 2010 13:14:45 +0000

sidux-manual (02.05.2010.05.02-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 05 May 2010 01:41:40 +0200

sidux-manual (02.05.2010.04.30-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 30 Apr 2010 12:51:25 +0000

sidux-manual (02.05.2010.04.21-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 22 Apr 2010 01:37:33 +0200

sidux-manual (02.05.2010.04.14-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 14 Apr 2010 17:39:14 +0200

sidux-manual (02.04.2010.04.09-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 10 Apr 2010 14:05:14 +0200
