@@ -9,36 +9,6 @@ Homepage: https://noc.sidux.com/manual
 Vcs-Svn: svn://svn.berlios.de/fullstory/sidux-manual/trunk
 Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/sidux-manual/trunk/
 
-Package: sidux-manual
-Architecture: all
-Pre-Depends: dpkg (>= 1.14.15)
-Depends: ${misc:Depends},
- sidux-manual-common,
- sidux-manual-bg,
- sidux-manual-da,
- sidux-manual-de,
- sidux-manual-el,
- sidux-manual-en,
- sidux-manual-es,
- sidux-manual-fr,
- sidux-manual-hr,
- sidux-manual-hu,
- sidux-manual-it,
- sidux-manual-ja,
- sidux-manual-nl,
- sidux-manual-pl,
- sidux-manual-pt-br,
- sidux-manual-ro,
- sidux-manual-ru
-Description: the official sidux manual - all languages
- This manual is divided into common sections, for example, a subject pertaining
- to partitioning is found in Partitioning your Hard Drive, and topics regarding
- the Internet/WIFI are grouped in Internet and Networking. There are some
- topics that cannot be grouped or require stand-alone status.
- .
- This package is a virtual package that installs all of the translated texts of
- the sidux manual.
-
 Package: sidux-manual-common
 Architecture: all
 Pre-Depends: dpkg (>= 1.14.15)
@@ -187,7 +157,8 @@ Package: sidux-manual-ja
 Architecture: all
 Pre-Depends: dpkg (>= 1.14.15)
 Depends: ${misc:Depends},
- sidux-manual-common, ttf-kochi-gothic
+ sidux-manual-common,
+ ttf-kochi-gothic
 Description: the official Japanese sidux manual
  This manual is divided into common sections, for example, a subject pertaining
  to partitioning is found in Partitioning your Hard Drive, and topics regarding
@@ -260,3 +231,34 @@ Description: the official Russian sidux manual
  topics that cannot be grouped or require stand-alone status.
  .
  Russian language version.
+
+Package: sidux-manual
+Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
+Depends: ${misc:Depends},
+ sidux-manual-common,
+ sidux-manual-bg,
+ sidux-manual-da,
+ sidux-manual-de,
+ sidux-manual-el,
+ sidux-manual-en,
+ sidux-manual-es,
+ sidux-manual-fr,
+ sidux-manual-hr,
+ sidux-manual-hu,
+ sidux-manual-it,
+ sidux-manual-ja,
+ sidux-manual-nl,
+ sidux-manual-pl,
+ sidux-manual-pt-br,
+ sidux-manual-ro,
+ sidux-manual-ru
+Description: the official sidux manual - all languages
+ This manual is divided into common sections, for example, a subject pertaining
+ to partitioning is found in Partitioning your Hard Drive, and topics regarding
+ the Internet/WIFI are grouped in Internet and Networking. There are some
+ topics that cannot be grouped or require stand-alone status.
+ .
+ This package is a virtual package that installs all of the translated texts of
+ the sidux manual.
+
