@@ -1,3 +1,3 @@
-pt-br			usr/share/sidux-manual
+pt-br		usr/share/sidux-manual
 lib/images-pt-br	usr/share/sidux-manual/lib
 lib/flags/pt-br*	usr/share/sidux-manual/lib/flags
