@@ -1,0 +1,13 @@
+Package: sidux-manual-@LL_CODE@
+Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
+Depends: ${misc:Depends},
+ sidux-manual-common@LL_LANGUAGE_EXTRA_DEPENDS@
+Description: the official @LL_LANGUAGE@ sidux manual
+ This manual is divided into common sections, for example, a subject pertaining
+ to partitioning is found in Partitioning your Hard Drive, and topics regarding
+ the Internet/WIFI are grouped in Internet and Networking. There are some
+ topics that cannot be grouped or require stand-alone status.
+ .
+ @LL_LANGUAGE@ language version.
+
