@@ -1,0 +1,14 @@
+Package: sidux-manual-common
+Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
+Depends: ${misc:Depends}
+Recommends: www-browser | x-www-browser
+Breaks: sidux-manual-reader (<< 0.2)
+Description: the official sidux manual - common files
+ This manual is divided into common sections, for example, a subject pertaining
+ to partitioning is found in Partitioning your Hard Drive, and topics regarding
+ the Internet/WIFI are grouped in Internet and Networking. There are some
+ topics that cannot be grouped or require stand-alone status.
+ .
+ This package contains the common css, image and html index files.
+
