@@ -1,0 +1,15 @@
+Package: sidux-manual
+Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
+Depends: ${misc:Depends},
+ sidux-manual-common,
+ @ALL_I18N_PKG@
+Description: the official sidux manual - all languages
+ This manual is divided into common sections, for example, a subject pertaining
+ to partitioning is found in Partitioning your Hard Drive, and topics regarding
+ the Internet/WIFI are grouped in Internet and Networking. There are some
+ topics that cannot be grouped or require stand-alone status.
+ .
+ This package is a virtual package that installs all of the translated texts of
+ the sidux manual.
+
