@@ -1,0 +1,11 @@
+Source: sidux-manual
+Section: doc
+Priority: optional
+Maintainer: Kel Modderman <kel@otaku42.de>
+Uploaders: Joaquim Boura <x-un-i@sidux.com>, Stefan Lippers-Hollmann <s.l-h@gmx.de>
+Build-Depends: debhelper (>= 7.9.3), patchutils
+Standards-Version: 3.9.1
+Homepage: https://noc.sidux.com/manual
+Vcs-Svn: svn://svn.berlios.de/fullstory/sidux-manual/trunk
+Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/sidux-manual/trunk/
+
