@@ -1,0 +1,3 @@
+@LL_CODE@		usr/share/sidux-manual
+lib/images-@LL_CODE@	usr/share/sidux-manual/lib
+lib/flags/@LL_CODE@*	usr/share/sidux-manual/lib/flags
