@@ -1,0 +1,6 @@
+usr/share/icons/hicolor/16x16/apps/sidux-manual.png	usr/share/icons/hicolor/16x16/apps/sidux-book2b.png
+usr/share/icons/hicolor/22x22/apps/sidux-manual.png	usr/share/icons/hicolor/22x22/apps/sidux-book2b.png
+usr/share/icons/hicolor/32x32/apps/sidux-manual.png	usr/share/icons/hicolor/32x32/apps/sidux-book2b.png
+usr/share/icons/hicolor/48x48/apps/sidux-manual.png	usr/share/icons/hicolor/48x48/apps/sidux-book2b.png
+usr/share/icons/hicolor/64x64/apps/sidux-manual.png	usr/share/icons/hicolor/64x64/apps/sidux-book2b.png
+usr/share/icons/hicolor/128x128/apps/sidux-manual.png	usr/share/icons/hicolor/128x128/apps/sidux-book2b.png
