@@ -5,8 +5,9 @@ sidux-manual (02.07.2010.06.13.1-2) UNRELEASED; urgency=low
   * add a Breaks: sidux-manual-reader (<< 0.2), as old versions can't parse
     with the current menu structure of sidux-manual.
   * switch to compat level 8.
+  * add debian/bootstrap.sh, to ease language additions/ removals.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 08 Aug 2010 05:21:56 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 30 Aug 2010 02:06:27 +0200
 
 sidux-manual (02.07.2010.06.13.1-1) unstable; urgency=low
 
